--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.williamdt_personal.passwordapp">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.forfun.wdh.passwordapp.view.InputScreen"
+        <activity
+            android:name="com.forfun.wdh.passwordapp.view.InputScreenActivity"
             android:configChanges="screenLayout|layoutDirection|orientation">
-            <!--android:screenOrientation="portrait" -->
+
+            <!-- android:screenOrientation="portrait" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name="com.forfun.wdh.passwordapp.view.SaltSelectActivity" />
+        <activity android:name="com.forfun.wdh.passwordapp.view.PasswordSelectActivity" />
+        <activity android:name="com.forfun.wdh.passwordapp.view.OptionsViewActivity"></activity>
     </application>
 
 </manifest>
