Finally ready for Beta release (yay :D) Added About page Next step for programming this would be refactoring: Naming schemes for variables, moving strings to string.xml file, adding smartwatch feature, implementing other options, other considerations.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name="com.forfun.wdh.passwordapp.view.OptionsViewActivity" />
         <activity android:name="com.forfun.wdh.passwordapp.view.ChangeCharactersActivity" />
         <activity android:name="com.forfun.wdh.passwordapp.view.ChangeRoundsActivity" />
-        <activity android:name="com.forfun.wdh.passwordapp.view.PersistOptionsActivity"></activity>
+        <activity android:name="com.forfun.wdh.passwordapp.view.PersistOptionsActivity" />
+        <activity android:name="com.forfun.wdh.passwordapp.view.AboutActivity"></activity>
     </application>
 
 </manifest>
